tests/src/frontend/typechecking/exhaustiveness/invalid/nested_overlapping1.sk
base class B {
  children =
  | A(B)
  | C(Int)
}
base class X {
  children =
  | Y(B)
}
fun test(): String {
  Y(A(C(1))) match {
  | Y(A(C(1))) -> "Fail\n"
  | Y(C(1)) -> "Fail\n"
  | Y(A(C(1))) -> "Fail\n"
  }
}
